--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+*{
+margin: 0;
+padding: 0;
+}
+
+body{
+font-family: 'Ubuntu',sans-serif;
+background-color: #000;
+overflow-x: hidden;
+}
+
+.navbar .navbar-brand {
+color: #E50914;
+font-weight: bold;
+}
+
+.navbar-nav .nav-item .nav-link{
+color: #E50914 ;
+}
+
